other/e-l/ensure-readonly-hostpath/.chainsaw-test/podcontrollers-good.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: gooddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      labels:
        app: busybox
    spec:
      initContainers:
      - name: busybox-init
        image: busybox:1.35
        volumeMounts:
        - mountPath: /some/dir
          name: foo
          readOnly: true
        - mountPath: /some/another/dir
          name: foo
          readOnly: true
      containers:
      - name: busybox
        image: busybox:1.35
        volumeMounts:
        - mountPath: /some/dir
          name: foo
          readOnly: true
      volumes:
      - name: foo
        hostPath:
          path: /var/log
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob01
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        metadata:
          labels:
            app: busybox
        spec:
          initContainers:
          - name: busybox-init
            image: busybox:1.35
            volumeMounts:
            - mountPath: /some/dir
              name: foo
              readOnly: true
            - mountPath: /some/another/dir
              name: foo
              readOnly: true
          containers:
          - name: busybox
            image: busybox:1.35
            volumeMounts:
            - mountPath: /some/dir
              name: foo
              readOnly: true
          volumes:
          - name: foo
            hostPath:
              path: /var/log
          restartPolicy: OnFailure
