other/e-l/ensure-readonly-hostpath/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: ensure-readonly-hostpath
spec:
  steps:
  - name: step-01
    try:
    - script:
        content: |
          sed 's/validationFailureAction: audit/validationFailureAction: Enforce/' ../ensure-readonly-hostpath.yaml | kubectl create -f -
    - assert:
        file: chainsaw-step-01-assert-1.yaml
  - name: step-02
    try:
    - apply:
        file: pods-good.yaml
    - apply:
        file: ../.kyverno-test/good-pod-01.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: pods-bad.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: ../.kyverno-test/bad-pod-01.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad-pod-02.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad-pod-03.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad-pod-04.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad-pod-05.yaml
    - apply:
        file: podcontrollers-good.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: podcontrollers-bad.yaml
  - name: step-99
    try:
    - delete:
        ref:
          apiVersion: kyverno.io/v1
          kind: ClusterPolicy
          name: ensure-readonly-hostpath
